--- a/index.html
+++ b/index.html
@@ -30,32 +30,36 @@
         <div onclick="showbtn()" class="btn">
           <button>Follow</button>
         </div>
-        <div class="card_section">
-          <div class="card_item">
-            <div class="text">
-              <b>342</b>
-              <p>post</p>
-            </div>
+     <div class="card_section">
+                <div class="card_item">
+                    <div class="text">
+                        <b>342</b>
+                        <p>post</p>
+                    </div>
             <div class="text">
               <b>120k</b>
               <p>Followers</p>
             </div>
             <div class="text">
-              <b>285</b>
-              <p>Following</p>
+                <b>285</b>
+                <p>Following</p>
             </div>
             <br />
-          </div>
-          <div class="card_btn">
+        </div>
+        <div class="card_btn">
             <button class="btn_ms1">Following</button>
             <button class="btn_ms">Messager</button>
-          </div>
         </div>
+    </div>
+
+
       </div>
     </div>
-    <div>
-        
-    </div>
+
+  <br>
+     
+      <div id="table-container"></div>
+      <button id="addRowBtn">+ Qator Qo‘shish</button>
     <script src="./js/app.js"></script>
   </body>
 </html>
